--- a/style.css
+++ b/style.css
@@ -187,3 +187,58 @@ footer nav a{
 @media screen and (max-width: 1400px) {
 
 }
+
+
+/* blog */
+
+
+.content-blog {
+	padding: 30px 0;
+	background-color: #ccc;
+	width: 850px;
+	margin: 20px auto 50px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	border-radius: 10px;
+	border-top: 10px solid #e6e6e6;
+	border-bottom: 10px solid #e6e6e6;
+	border-right: 2px solid #e6e6e6;
+	border-left: 2px solid #e6e6e6;
+	box-shadow:0 0 10px rgba(0,0,0,0.5);    
+}
+.header {
+	display: flex;
+	justify-content: center;
+	border-radius: 10px;
+}
+.header img {
+	border-radius: 10px;
+}
+.photo{
+
+}
+.body{
+	width: 80%;
+	margin: auto;
+}
+.title {
+	text-align: center;
+	margin: 10px 0;
+}
+.text {
+	margin: auto;
+	font-size: 20px;
+	margin: 10px 0 5px;
+}
+.ul{
+	display: flex;
+}
+.tags a{
+	margin: 5px 10px;
+	border: 1 solid #fff;
+	border-radius: 10px;
+	color: #fff;
+	text-transform: uppercase;
+	text-align: center;
+}
