--- a/style.css
+++ b/style.css
@@ -253,6 +253,43 @@ ul{
 /* Contacts */
 
 
+.form{
+	width: 50%;
+	margin: 50px auto;
+}
+.feedback-input{
+	color: #000;
+	font-size: 15px;
+	padding: 15px 0;
+	margin-bottom: 10px;
+	width: 100%;
+	border: 0px solid transparent;
+	border-bottom: 1px solid #000;
+}
+textarea{
+	width: 100%;
+	height: 150px;
+	padding: 15px 0;
+	color: #000;
+	font-size: 15px;
+	border: 0px solid transparent;
+	border-bottom: 1px solid #000;
+}
+.button-submit{
+	margin-top: 30px;
+	width: 100%;
+	border: 1px solid #000;
+	background-color: #000;
+	color: #fff;
+	height: 50px;
+	font-size: 20px;
+	font-weight: bold;
+}
+.button-submit:hover{
+	background-color: #fff;
+	color: #000;
+	border: 2px solid #000;
+}
 /* Contacts */
 /* Contacts */
 
