--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
 
 nav {
 	margin: auto;
-	width: 800px;
+	width: 100%;
   height: 50px;
 	font-weight: bold;
 }
@@ -47,6 +47,9 @@ nav {
 	background-color: #fff;
 	font-size: 14px;
 	margin-top: 40px;
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
 }
 
 .topnav a {
@@ -63,6 +66,7 @@ nav {
 
 .topnav .icon {
 	display: none;
+	font-weight: normal;
 }
 
 @media screen and (max-width: 768px) {
@@ -70,8 +74,6 @@ nav {
 		display: none;
 	}
 	.topnav a.icon {
-		float: right;
-		margin-top: -17px;
 		display: block;
 		color: black;
 	}
